--- a/EDA_Project.ipynb
+++ b/EDA_Project.ipynb
@@ -79,6 +79,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/lokireddymadhavi/fraud-detection.git"
+      ],
+      "metadata": {
+        "id": "0-3Z_5aktJIv",
+        "outputId": "ca53594e-1c16-4194-e110-bd9f5138d508",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'fraud-detection'...\n",
+            "remote: Enumerating objects: 6, done.\u001b[K\n",
+            "remote: Counting objects: 100% (6/6), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Total 6 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (6/6), 1.17 MiB | 4.19 MiB/s, done.\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### File Upload"
